[package]
name = "bresenham_zip"
version = "1.0.0"
edition = "2021"
authors = [ "Soto Estévez <ricardo@sotoestevez.dev>" ]
description = "Iterator to perform Bresenham over two lines of the same triangle simultaneusly for triangle rasterization"
readme = "README.md"
homepage = "https://crates.io/crates/bresenham_zip"
repository = "https://github.com/kriogenia/bresenham_zip"
documentation = "https://doc.rs/bresenham_zip"
license = "MIT OR Apache-2.0"
categories = [ "algorithms", "graphics" ]
keywords = [ "bresenham", "rasterization", "triangle", "drawing" ]
include = [
    "/Cargo.*",
    "/LICENSE-*",
    "/README.md",
    "/src/**/*",
]

[dependencies]
line_drawing = { git = "https://github.com/andyblarblar/line_drawing.git" }

[unstable]
build-std = ["core"]
#![feature(error_in_core)]
